--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
   <!-- custom css file link  -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 
 
 
@@ -514,7 +514,7 @@
 
   <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 
 </body>
 </html>
