--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <span id="close-login-form" class="fas fa-times"></span>
 
-    <form action="">
+    <form action="connect1.php" method="post">
       <h3>user login</h3>
       <input type="email" placeholder="email" class="box">
       <input type="password" placeholder="password" class="box">
@@ -341,7 +341,7 @@
     <h3>subscribe for latest updates</h3>
 
 
-    <form action="">
+    <form action="connect3.php" method="post">
       <input type="email" placeholder="enter your email">
       <input type="submit" value="subscribe">
     </form>
@@ -453,7 +453,7 @@
 
 
 
-      <form action="">
+      <form action="connect1.php" method="post">
         <h3>get in touch</h3>
         <input type="text" placeholder="Your name" class="box">
         <input type="email" placeholder="Your email" class="box">
